@@ -1,6 +1,6 @@
 [comment {-*- tcl -*- doctools manpage}]
 [comment ===========================================]
-[manpage_begin treeql n 0.3.1]
+[manpage_begin treeql n 1.3]
 [copyright {2004 Colin McCormack <coldstore@users.sourceforge.net>}]
 [copyright {2004 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Tree Query Language}]
@@ -9,7 +9,7 @@
 [require snit]
 [require struct::list]
 [require struct::set]
-[require treeql [opt 1.1]]
+[require treeql [opt 1.3]]
 [description]
 [para]
 
@@ -724,6 +724,23 @@ each node to the variable named in [arg var], and executing the script
 The collected results of these executions is made the new node set,
 replacing the current one.
 
+[nl]
+
+The script [arg body] is executed in the context of the caller.
+
+
+[lst_item "[method map] [arg var] [arg body]"]
+
+Iterates over the current node set, binding the handle of each node to
+the variable named in [arg var], and executing the script [arg body].
+
+The collected results of these executions is made the new node set,
+replacing the current one.
+
+[nl]
+
+The script [arg body] is executed in the context of the caller.
+
 
 [lst_item "[method quote] [arg val]"]
 
@@ -749,6 +766,10 @@ operator [method over] on the nodes in the node set created by that
 query. The current node set is not changed, except through side
 effects from the script [arg body].
 
+[nl]
+
+The script [arg body] is executed in the context of the caller.
+
 
 [lst_item "[method with] [arg query] [arg body]"]
 
@@ -756,11 +777,17 @@ Interprets the [arg query], then runs the script [arg body] on the
 node set generated by the query. At last it restores the current node
 set as it was before the execution of the query.
 
+[nl]
+
+The script [arg body] is executed in the context of the caller.
+
 
 [lst_item "[method over] [arg var] [arg body]"]
 
 Executes the script [arg body] for each node in the node set, with the
 variable named by [arg var] bound to the name of the current node.
+
+The script [arg body] is executed in the context of the caller.
 
 [nl]
 
