@@ -250,7 +250,7 @@ test treeql-4.3 "backward from 2" {} {
 } "10 9 4 8 7 3 1"
 
 test treeql-5.0 "<= 4 or odd" {} {
-    q query reset reset tree left orq {tree exprP {4 >=} data} get data 
+    q query reset reset tree left orq {tree exprP {4 >=} data} get data
 } "0 9 3 7 2 13 4 5 11 1"
 
 test treeql-5.1 "> 4 and odd" {} {
@@ -286,7 +286,7 @@ test treeql-6.1 "delete all even numbers (except root)" {} {
     q query tree get data
 } 0
 
-test treeql-6.1 "delete all (except root)" {} {
+test treeql-6.2 "delete all (except root)" {} {
     q query reset tree notq {root} delete
     q query tree get data
 } 0
@@ -298,6 +298,213 @@ test treeql-get.1 {attributes with special characters} {
     $tree set n3 title {[hello]}
     q query root children get title
 } [list hello {hello there} {[hello]}]
+
+# -------------------------------------------------------------------------
+
+test treeql-over-1.0 {over} {
+    set track {}
+    set context 1
+    q query root over n {lappend track $n $context}
+    set track
+} {root 1}
+
+test treeql-over-1.1 {over} {
+    set track {}
+    set context 2
+    q query tree subquery root over n {lappend track $n $context}
+    set track
+} {root 2}
+
+test treeql-over-1.2 {over} {
+    set track {}
+    set context 2
+    q query tree andq {root over n {lappend track $n $context}}
+    set track
+} {root 2}
+
+test treeql-over-1.3 {over} {
+    set track {}
+    set context 2
+    q query tree orq {root over n {lappend track $n $context}}
+    set track
+} {root 2}
+
+test treeql-over-1.4 {over} {
+    set track {}
+    set context 2
+    q query tree notq {root over n {lappend track $n $context}}
+    set track
+} {root 2}
+
+test treeql-foreach-1.0 {foreach} {
+    set track {}
+    set context 1
+    q query tree foreach root n {lappend track $n $context}
+    set track
+} {root 1}
+
+test treeql-foreach-1.1 {foreach} {
+    set track {}
+    set context 2
+    q query tree subquery root foreach root n {lappend track $n $context}
+    set track
+} {root 2}
+
+test treeql-foreach-1.2 {foreach} {
+    set track {}
+    set context 2
+    q query tree andq {root foreach root n {lappend track $n $context}}
+    set track
+} {root 2}
+
+test treeql-foreach-1.3 {foreach} {
+    set track {}
+    set context 2
+    q query tree orq {root foreach root n {lappend track $n $context}}
+    set track
+} {root 2}
+
+test treeql-foreach-1.4 {foreach} {
+    set track {}
+    set context 2
+    q query tree notq {root foreach root n {lappend track $n $context}}
+    set track
+} {root 2}
+
+test treeql-with-1.0 {with} {
+    set track {}
+    set context 1
+    q query with root {lappend track $context}
+    set track
+} 1
+
+test treeql-with-1.1 {with} {
+    set track {}
+    set context 2
+    q query root subquery with root {lappend track $context}
+    set track
+} 2
+
+test treeql-with-1.2 {with} {
+    set track {}
+    set context 2
+    q query andq {with root {lappend track $context}}
+    set track
+} 2
+
+test treeql-with-1.3 {with} {
+    set track {}
+    set context 2
+    q query orq {with root {lappend track $context}}
+    set track
+} 2
+
+test treeql-with-1.4 {with} {
+    set track {}
+    set context 2
+    q query notq {with root {lappend track $context}}
+    set track
+} 2
+
+test treeql-transform-1.0 {transform} {
+    set track {}
+    set context 1
+    q query transform root n {
+	lappend track $n $context
+	continue
+    }
+    set track
+} {root 1}
+
+test treeql-transform-1.1 {transform} {
+    set track {}
+    set context 2
+    q query subquery transform root n {
+	lappend track $n $context
+	continue
+    }
+    set track
+} {root 2}
+
+test treeql-transform-1.2 {transform} {
+    set track {}
+    set context 2
+    q query andq {transform root n {
+	lappend track $n $context
+	continue
+    }}
+    set track
+} {root 2}
+
+test treeql-transform-1.3 {transform} {
+    set track {}
+    set context 2
+    q query orq {transform root n {
+	lappend track $n $context
+	continue
+    }}
+    set track
+} {root 2}
+
+test treeql-transform-1.4 {transform} {
+    set track {}
+    set context 2
+    q query notq {transform root n {
+	lappend track $n $context
+	continue
+    }}
+    set track
+} {root 2}
+
+test treeql-map-1.0 {map} {
+    set track {}
+    set context 1
+    q query root map n {
+	lappend track $n $context
+	continue
+    }
+    set track
+} {root 1}
+
+test treeql-map-1.1 {map} {
+    set track {}
+    set context 2
+    q query subquery root map n {
+	lappend track $n $context
+	continue
+    }
+    set track
+} {root 2}
+
+test treeql-map-1.2 {map} {
+    set track {}
+    set context 2
+    q query andq {root map n {
+	lappend track $n $context
+	continue
+    }}
+    set track
+} {root 2}
+
+test treeql-map-1.3 {map} {
+    set track {}
+    set context 2
+    q query orq {root map n {
+	lappend track $n $context
+	continue
+    }}
+    set track
+} {root 2}
+
+test treeql-map-1.4 {map} {
+    set track {}
+    set context 2
+    q query notq {root map n {
+	lappend track $n $context
+	continue
+    }}
+    set track
+} {root 2}
 
 # -------------------------------------------------------------------------
 q destroy
